--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script type="module" src="main.js"></script>
-    <link rel="stylesheet" href="index.css"> 
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -46,19 +46,24 @@
         </div>
     </nav>
 
-    <section class="d-flex justify-content-center mt-4" >
-            <form class="d-flex w-md-50">
-                <input class="form-control me-2" type="search" placeholder="Buscá un producto" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+    <section class="d-flex justify-content-center mt-4">
+        <form class="d-flex w-md-50">
+            <input class="form-control me-2" type="search" placeholder="Buscá un producto" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
     </section>
 
     <h1 class="title-container">Lista de productos</h1>
     <div class="container">
-        <ul id="productos-container" style="display: flex; justify-content: center; flex-wrap: wrap; row-gap: 2rem; column-gap: 2rem;"></ul>
+        <ul id="productos-container"
+            style="display: flex; justify-content: center; flex-wrap: wrap; row-gap: 2rem; column-gap: 2rem;"></ul>
     </div>
 
-
+    <section class="d-flex justify-content-center">
+        <div class="spinner-grow text-primary" role="status" id="grow-id">
+            <span class="sr-only"></span>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
