--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -12,51 +12,43 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-light bg-white" style="height: 65px;">
+        <span class="" style="cursor: pointer;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            </svg>  
+        </span>
+        <div class="nav">
+            <a class="nav-link active nav-item" aria-current="page" href="#">Principal</a>
+            <a class="nav-link nav-item disabled"  href="#">Promociones</a>
+            <a class="nav-link nav-item" href="#">Carrito</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Categorías</a>
         </div>
+        <span class="" style="margin-right: 12px; cursor: pointer;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" fill="gray" class="bi bi-cart3" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+            </svg>
+            <span id="qty-cart" class="top-4 start-100 translate-middle badge rounded-pill bg-danger" style="display: none;" >
+            </span>
+        </span>
     </nav>
 
     <section class="d-flex justify-content-center mt-4">
-        <form class="d-flex w-md-50">
-            <input class="form-control me-2" type="search" placeholder="Buscá un producto" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+        <form class="d-flex form-search">
+          <input class="form-control me-2" type="search" placeholder="Buscá un producto..." aria-label="Search">
+          <button class="btn btn-link" type="submit">
+            <!-- ícono -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+            </svg>
+          </button>
         </form>
-    </section>
+      </section>
 
-    <h1 class="title-container">Lista de productos</h1>
-    <div class="container">
-        <ul id="productos-container"
-            style="display: flex; justify-content: center; flex-wrap: wrap; row-gap: 2rem; column-gap: 2rem;"></ul>
+    <div class="container mt-5">
+        <ul id="productos-container" class="p-0"
+            style="display: flex; justify-content: center; flex-wrap: wrap; row-gap: 2rem; column-gap: 2rem;">
+        </ul>
     </div>
 
     <section class="d-flex justify-content-center">
