--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script type="module" src="main.js"></script>
+    <script type="module" src="getShoppingCart.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-white" style="height: 65px;">
-        <span class="" style="cursor: pointer;">
+    <nav class="navbar navbar-light bg-white fixed-top" style="height: 65px;">
+        <span class="" style=" margin-left: 15px; cursor: pointer;">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
             </svg>  
@@ -21,10 +22,10 @@
         <div class="nav">
             <a class="nav-link active nav-item" aria-current="page" href="#">Principal</a>
             <a class="nav-link nav-item disabled"  href="#">Promociones</a>
-            <a class="nav-link nav-item" href="#">Carrito</a>
+            <a class="show-cart nav-link nav-item" href="#">Carrito</a>
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Categorías</a>
         </div>
-        <span class="" style="margin-right: 12px; cursor: pointer;">
+        <span class="show-cart" style="margin-right: 15px; cursor: pointer;">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" fill="gray" class="bi bi-cart3" viewBox="0 0 16 16">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
             </svg>
@@ -54,6 +55,38 @@
     <section class="d-flex justify-content-center">
         <div class="spinner-grow text-primary" role="status" id="grow-id">
             <span class="sr-only"></span>
+        </div>
+    </section>
+
+    <section id="cart-sidebar" class="cart-sidebar">
+        <div>
+            <button id="close-cart" class="close-cart-btn" aria-label="Cerrar">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="gray" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M6.646 14.354a.5.5 0 0 1 0-.708L10.293 10 6.646 6.354a.5.5 0 1 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708 0z"/>
+                </svg>
+            </button>
+            <h4>Lista de productos</h4>
+            <div id="cart-list" class="cart-list"></div>
+            <div class="cart-total">
+            <strong>Total: <span id="cart-total">0</span></strong>
+            </div>
+        </div>
+        <div class="cart-btn">
+            <div class="mt-3">
+              <button id="btn-checkout" class="btn btn-sm btn-primary" disabled onclick="checkout()">Finalizar compra</button>
+            </div>
+            <div class="mt-3">
+              <button id="btn-remove-all" class="btn btn-sm btn-danger" disabled onclick="removeAllProducts()">Eliminar todos los productos</button>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="toast-container position-fixed top-0 right-0 p-3" style="z-index: 9999;">
+            <div id="toast" class="toast" style="min-width: 200px;" data-bs-delay="3000">
+                <div class="toast-body">
+                </div>
+            </div>
         </div>
     </section>
 
