--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script type="module" src="main.js"></script>
-    <script type="module" src="getShoppingCart.js"></script>
+    <script defer type="module" src="getShoppingCart.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
