fix: toast position

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <section>
-        <div class="toast-container position-fixed top-0 right-0 p-3" style="z-index: 9999;">
+        <div class="toast-container position-fixed bottom-0 left-0 p-3" style="z-index: 9999;">
             <div id="toast" class="toast" style="min-width: 200px;" data-bs-delay="3000">
                 <div class="toast-body">
                 </div>
