--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -90,6 +90,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <div id="product-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span id="close-modal" class="close">&times;</span>
+            <img id="modal-image" src="" alt="" class="modal-image">
+            <h2 id="modal-title"></h2>
+            <p id="modal-description"></p>
+            <div class="modal-buttons">
+            <button id="add-to-cart-btn">Agregar al carrito</button>
+            <button id="close-button">Cerrar</button>
+            </div>
+        </div>
+        </div>
 </body>
 
 </html>
