--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -104,9 +104,11 @@
         </div>
     </div>
 
-    <div style="display: flex; justify-content: center; align-items: center; height: 30vh;">
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 30vh;">
         <p id="no-results" style="display: none;">No encontramos resultados para la búsqueda.</p>
+        <button class="btn btn-primary mt-4" id="close-no-results" style="display: none;">Refrescar</button>
     </div>
+
 </body>
 
 </html>
