precio modal y estilos botones

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -93,12 +93,13 @@
 
     <div id="product-modal" class="modal" style="display: none;">
         <div class="modal-content">
-            <span id="close-modal" class="close">&times;</span>
             <img id="modal-image" src="" alt="" class="modal-image">
             <h2 id="modal-title"></h2>
+            <p id="modal-price"></p>
+            <p id="modal-installments"></p>
             <p id="modal-description"></p>
             <div class="modal-buttons">
-            <button id="add-to-cart-btn">Agregar al carrito</button>
+            <button id="add-to-cart-btn" class="btn-add">Agregar al carrito</button>
             <button id="close-button">Cerrar</button>
             </div>
         </div>
