--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -105,9 +105,11 @@
         </div>
     </div>
 
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 30vh;">
+     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 30vh;">
         <p id="no-results" style="display: none;">No encontramos resultados para la búsqueda.</p>
-        <button class="btn btn-primary mt-4" id="close-no-results" style="display: none;">Refrescar</button>
+    </div>
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 10vh;">
+        <p id="error-login" style="display: none;">Hubo un error al traer los productos. Intente nuevamente.</p>
     </div>
 
 </body>
